# verdant_frontend

./: .env.example  .gitignore  BUGS.md  FEATURE_REQ.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: nightly-main.yml  promote-stable.yml
src/: api.js  main.js
src-tauri/: Cargo.toml  emails.db  errors.txt  tauri.conf.json
src-tauri/assets/: oauth-success.html
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  background_sync.rs  db.rs  gmail.rs  imap_sync.rs  lib.rs
src-tauri/src/commands/: compose.rs  mail.rs  updater.rs
src/lib/: format.js  i18n.js  sync.js
src/ui/: accounts.js  compose.js  onboarding.js  reading.js  settings.js  shell.js  styles.js  thread.js
src/ui/styles/: accounts.css  dynamic.css  onboarding.css  shell.css  updates.css
