[package]
name = "Verdant-Desktop"
version = "1.1.9"
description = "Verdant - a calm mail experience"
authors = ["cns-studios"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
oauth2 = "4"
tiny_http = "0.12"
url = "2.5"
open = "5.1"
base64 = "0.22.1"
dotenvy = "0.15"
pulldown-cmark = "0.12"
semver = "1"
