[package]
name = "Verdant-Desktop"
version = "2.1.4"
description = "Verdant - a calm mail experience"
authors = ["cns-studios"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
oauth2 = "4"
tiny_http = "0.12"
url = "2.5"
open = "5.1"
base64 = "0.22.1"
dotenvy = "0.15"
pulldown-cmark = "0.12"
semver = "1"
tauri-plugin-store = "2"
tauri-plugin-process = "2"

imap = "2.4"
native-tls = "0.2"
mailparse = "0.15"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
keyring = { version = "2", features = ["linux-secret-service-rt-async-io-crypto-rust"] }
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
